boreal/tests/assets/invalid_files/compilation/import_unknown.yar
// [error: unknown import mohg]
import "time"
import "mohg"

rule a {
    condition: true
}
